@@ -18,7 +18,6 @@ package io.aiven.kafka.connect.common.output;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -49,7 +48,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithoutMetadataAndValue() throws IOException {
-        sut = new JsonOutputWriter(Collections.EMPTY_LIST, byteStream);
+        sut = new JsonOutputWriter(Collections.emptyList(), byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
 
         final SinkRecord record1 = createRecord("key0", level1Schema, struct1, 1, 1000L);
@@ -61,7 +60,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithValue() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding));
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
 
@@ -74,7 +73,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithOneFieldAndValue() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -88,7 +87,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void multiStringJsonValueWithOneFieldAndValue() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -100,12 +99,12 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
         final String expected = "[{\"value\":{\"name\":\"John\"},\"key\":\"key0\"},"
             + "{\"value\":{\"name\":\"Pekka\"},\"key\":\"key0\"}]";
 
-        assertRecords(Arrays.asList(record1, record2), expected);
+        assertRecords(List.of(record1, record2), expected);
     }
 
     @Test
     void jsonValueWithAllMetadata() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding),
             new OutputField(OutputFieldType.OFFSET, noEncoding),
             new OutputField(OutputFieldType.TIMESTAMP, noEncoding),
@@ -127,7 +126,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMultipleHeaders() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.HEADERS, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -158,7 +157,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMissingKey() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.KEY, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Schema level1Schema = SchemaBuilder.struct().field("name", Schema.STRING_SCHEMA);
@@ -173,7 +172,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMissingTimestamp() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.TIMESTAMP, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Schema level1Schema = SchemaBuilder.struct().field("name", Schema.STRING_SCHEMA);
@@ -188,7 +187,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void jsonValueWithMissingHeader() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding),
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding),
             new OutputField(OutputFieldType.HEADERS, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -202,7 +201,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
 
     @Test
     void failedIfLastRecordIsMissing() throws IOException {
-        final List<OutputField> fields = Arrays.asList(new OutputField(OutputFieldType.VALUE, noEncoding));
+        final List<OutputField> fields = List.of(new OutputField(OutputFieldType.VALUE, noEncoding));
         sut = new JsonOutputWriter(fields, byteStream);
 
         final Struct struct1 = new Struct(level1Schema).put("name", "John");
@@ -212,7 +211,7 @@ public class JsonOutputWriterTest extends JsonOutputWriterTestHelper {
         final SinkRecord record2 = createRecord("key0", level1Schema, struct2, 1, 1000L);
 
         assertThrows(JsonParseException.class, () -> {
-            useWithWrongLastRecord(Arrays.asList(record1, record2));
+            useWithWrongLastRecord(List.of(record1, record2));
         });
     }
 
